cleanup of day3

--- a/day3/rucksack-reorganization.ipynb
+++ b/day3/rucksack-reorganization.ipynb
@@ -28,22 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "b16c3993",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(itemsInRucksack) as f:\n",
-    "    lines = f.readlines()\n",
-    "    print(len(lines))"
+    "    lines = f.readlines()"
    ]
   },
   {
@@ -120,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "17bb0eb1",
    "metadata": {},
    "outputs": [],
@@ -144,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "ad6042b9",
    "metadata": {},
    "outputs": [],
@@ -161,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "334c358b",
    "metadata": {},
    "outputs": [
