--- a/day6/chatGPT_results.ipynb
+++ b/day6/chatGPT_results.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "- provided chatGPT with the input\n",
-    "- code runs fine but seems like it didn't understand that it needed to check for unqieue characters\n",
+    "- code runs fine but seems like it didn't understand that it needed to check for unique characters\n",
     "- fail"
    ]
   },
